<resources>
  <string name="app_name" translatable="false">Android Places Demo</string>
  <string name="error_alert_title" translatable="false">Uh-Oh!</string>
  <string name="error_alert_message_invalid_origin" translatable="false">Unable to parse Location Origin. Expected format: "33, 128"</string>
  <string name="error_alert_message_invalid_bounds" translatable="false">Unable to parse Location Bias or Location Restriction. Expected format: "33, 128"</string>
  <string name="error_alert_message_invalid_photo_size" translatable="false">Unable to parse Photo size. Expected format is integers</string>
  <string name="error_api_key" translatable="false">No API key defined in gradle.properties</string>
  <string name="action_exit" translatable="false">Exit</string>
  <string name="display_raw_results" translatable="false">Display raw results?</string>
  <string name="autocomplete_button" translatable="false">Place Autocomplete</string>
  <string name="autocomplete_address_button" translatable="false">Place Autocomplete Address Form</string>
  <string name="current_place_button" translatable="false">Current Place</string>
  <string name="place_and_photo_button" translatable="false">Place Details and Place Photos</string>
  <string name="main_isOpenButtonText" translatable="false">Place is Open?</string>
  <string name="autocomplete_query_hint" translatable="false">(Initial) Query</string>
  <string name="autocomplete_hint_hint" translatable="false">Hint</string>
  <string name="autocomplete_country_hint" translatable="false">Countries (e.g CH, US, RO)</string>
  <string name="autocomplete_use_types_filter" translatable="false">Use TypesFilter?</string>
  <string name="autocomplete_types_filter_hint" translatable="false">
    <font size="16">
      Comma separated list of up to 5 place types
    </font>
  </string>
  <string name="fetch_autocomplete_predictions_button" translatable="false">Fetch Predictions</string>
  <string name="autocomplete_address1_label" translatable="false">Address Line 1</string>
  <string name="autocomplete_address2_label" translatable="false">Apartment, unit, suite, or floor #</string>
  <string name="autocomplete_city_label" translatable="false">City</string>
  <string name="autocomplete_state_label" translatable="false">State/Province</string>
  <string name="autocomplete_postal_label" translatable="false">Postal code</string>
  <string name="autocomplete_country_label" translatable="false">Country/Region</string>
  <string name="autocomplete_proximity_check" translatable="false">Check device proximity</string>
  <string name="autocomplete_map_label" translatable="false">Map view of the selected address</string>
  <string name="autocomplete_save_button" translatable="false">Submit address</string>
  <string name="autocomplete_reset_button" translatable="false">Clear form</string>
  <string name="autocomplete_location_origin_label" translatable="false">Location Origin (format: -33.2, 128.2)</string>
  <string name="autocomplete_location_bias_label" translatable="false">Location Bias (format: -33.2, 128.2)</string>
  <string name="autocomplete_location_restriction_label" translatable="false">Location Restriction (format: -33.2, 128.2)</string>
  <string name="autocomplete_location_origin_hint" translatable="false">Origin (lat, lng)</string>
  <string name="autocomplete_location_south_west_hint" translatable="false">South West (lat, lng)</string>
  <string name="autocomplete_location_north_east_hint" translatable="false">North East (lat, lng)</string>
  <string name="autocomplete_use_session_token" translatable="false">(Predictions-only) Use session token?</string>
  <string name="autocomplete_activity_overlay_mode" translatable="false">Overlay mode?</string>
  <string name="autocomplete_support_fragment_text_label" translatable="false">Autocomplete Support Fragment:</string>
  <string name="autocomplete_fragment_text_label" translatable="false">Autocomplete Fragment:</string>
  <string name="autocomplete_support_fragment_update_button" translatable="false">Update Support Fragment</string>
  <string name="autocomplete_fragment_update_button" translatable="false">Update Fragment</string>
  <string name="autocomplete_activity_button" translatable="false">Open Activity</string>
  <string name="autocomplete_skipped_message" translatable="false">Address accepted without checking proximity</string>
  <string name="programmatic_autocomplete_geocoding">Programmatic Autocomplete + Geocoding</string>
  <string name="search">Search</string>
  <string name="search_a_place">Search for a Place</string>
  <string name="programmatic_place_predictions_instructions" translatable="false">This activity demonstrates as-you-type programmatic place predictions. Tap on the search icon on the toolbar and search for a place.</string>
  <string name="programmatic_place_predictions_no_matches" translatable="false">No matching search results</string>
  <string name="programmatic_place_predictions_error" translatable="false">Error fetching place search results</string>
  <string name="distance_in_meters">%d meters</string>
  <string name="find_current_place_button" translatable="false">Find Current Place</string>
  <string name="icon_view_content_description" translatable="false">Icon View</string>
  <string name="fetch_icon_checkbox" translatable="false">Also fetch icon?</string>
  <string name="fetch_icon_missing_fields_warning" translatable="false">\'Also fetch icon?\' is selected, but ICON_URL Place Field is not.</string>
  <string name="fetch_photo_selected_but_no_metadata">\'Also fetch photo?\' is selected, but PHOTO_METADATAS Place Field is not.</string>
  <string name="custom_photo_reference_but_not_fetch_photo">Using \'Custom photo reference\', but \'Also fetch photo?\' is not selected.</string>
  <string name="icon_view_image_content_description" translatable="false">Image view to display a Place Icon Image</string>
  <string name="icon_with_background" translatable="false">Icon with background:</string>
  <string name="place_photo" translatable="false">Place photo:</string>
  <string name="place_id_default" translatable="false">ChIJM3wn3VVYwokRvu2kbqBKUsM</string>
  <string name="place_id_field_hint" translatable="false">Enter place ID</string>
  <string name="fetch_photo_checkbox" translatable="false">Also fetch photo?</string>
  <string name="photo_max_width_hint" translatable="false">Photo Max Width</string>
  <string name="photo_max_height_hint" translatable="false">Photo Max Height</string>
  <string name="use_custom_photo_reference" translatable="false">Use custom Photo Reference?</string>
  <string name="custom_photo_reference_hint" translatable="false">Custom Photo Reference</string>
  <string name="use_custom_fields" translatable="false">Manually set Place Fields?</string>
  <string name="fetch_place_and_photo_button" translatable="false">Fetch Place and Photo</string>
  <string name="get_business_status_button" translatable="false">Get Business Status</string>
  <string name="get_plus_code_button" translatable="false">Get Plus Code</string>
  <string name="get_price_level_button" translatable="false">Get Price Level</string>
  <string name="get_rating_button" translatable="false">Get Rating</string>
  <string name="get_user_ratings_total_button" translatable="false">Get User Ratings Total</string>
  <string name="get_utc_offset_minutes_button" translatable="false">Get UTC Offset Minutes</string>
  <string name="get_website_uri_button" translatable="false">Get Website URI</string>
  <string name="isOpen_fetch_place_button_text" translatable="false">Fetch Place then check IsOpen</string>
  <string name="isOpen_is_open_button_text" translatable="false">Request IsOpen by Place ID</string>
  <string name="isOpen_place_id_hint" translatable="false">Enter place ID</string>
  <string name="isOpen_use_custom_fields_text" translatable="false">Manually set Place Fields?</string>
  <string name="isOpen_spinner_description" translatable="false">Time Zone</string>
  <string name="isOpen_date_hint" translatable="false">Select isOpen date</string>
  <string name="isOpen_time_hint" translatable="false">Select isOpen time</string>
  <string name="isOpen_use_custom_time_hint" translatable="false">Use custom isOpen time? (must set time zone, date, and time)</string>
  <string name="isOpen_default_place_id" translatable="false">ChIJD3uTd9hx5kcR1IQvGfr8dbk</string>
</resources>