<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2025 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceDetailsAndPhotosActivity">

  <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/top_bar"
      style="@style/Widget.MaterialComponents.Toolbar.Primary"
      android:layout_width="0dp"
      android:layout_height="?attr/actionBarSize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/place_and_photo_button"
      app:titleTextColor="?attr/colorOnPrimary" />

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@+id/top_bar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/place_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large"
        android:orientation="vertical">

      <EditText
          android:id="@+id/place_id_field"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:hint="@string/place_id_field_hint"
          android:imeOptions="actionGo"
          android:inputType="text"
          android:text="@string/place_id_default" />

      <CheckBox
          android:id="@+id/fetch_photo_checkbox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/fetch_photo_checkbox" />

      <CheckBox
          android:id="@+id/fetch_icon_checkbox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/fetch_icon_checkbox" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <EditText
            android:id="@+id/photo_max_width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/photo_max_width_hint"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <EditText
            android:id="@+id/photo_max_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/photo_max_height_hint"
            android:imeOptions="actionNext"
            android:inputType="number" />

      </LinearLayout>

      <CheckBox
          android:id="@+id/use_custom_photo_reference"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/use_custom_photo_reference" />

      <EditText
          android:id="@+id/custom_photo_reference"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:hint="@string/custom_photo_reference_hint"
          android:imeOptions="actionNext"
          android:inputType="text" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <CheckBox
            android:id="@+id/use_custom_fields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/use_custom_fields" />

        <TextView
            android:id="@+id/custom_fields_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

      </LinearLayout>

      <Button
          android:id="@+id/fetch_place_and_photo_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/fetch_place_and_photo_button" />

      <CheckBox
          android:id="@+id/display_raw_results"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/display_raw_results" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/icon_with_background" />

      <ImageView
          android:id="@+id/icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/material_grey_300"
          android:contentDescription="@string/icon_view_image_content_description"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:padding="4dp"
          app:tint="@android:color/white" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/place_photo" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_grey_300"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

      </LinearLayout>

      <TextView
          android:id="@+id/photo_metadata"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textIsSelectable="true" />

      <TextView
          android:id="@+id/response"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:freezesText="true"
          android:textIsSelectable="true" />

    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
