<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2020 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_large"
    tools:context=".CurrentPlaceActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <CheckBox
          android:id="@+id/use_custom_fields"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/use_custom_fields"/>

      <TextView
          android:id="@+id/custom_fields_list"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/find_current_place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_current_place_button"/>

    <CheckBox
        android:id="@+id/display_raw_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/display_raw_results"/>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/response"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

  </LinearLayout>

</ScrollView>

